flex-cn-setup/pygluu/kubernetes/templates/alb/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: gluu
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/certificate-arn: ""
    alb.ingress.kubernetes.io/auth-session-cookie: custom-cookie
    alb.ingress.kubernetes.io/auth-session-timeout: '3600'
    alb.ingress.kubernetes.io/target-group-attributes: stickiness.enabled=true,stickiness.lb_cookie.duration_seconds=60,stickiness.type=lb_cookie
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '10'
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
    alb.ingress.kubernetes.io/actions.scim-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "Path":"/jans-scim/restv1/scim-configuration", "StatusCode": "HTTP_301"}}'
    alb.ingress.kubernetes.io/actions.openid-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "Path":"/jans-auth/.well-known/openid-configuration", "StatusCode": "HTTP_301"}}'
    alb.ingress.kubernetes.io/actions.uma-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "Path":"/jans-auth/restv1/uma2-configuration", "StatusCode": "HTTP_301"}}'
    alb.ingress.kubernetes.io/actions.webfinger-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "Path":"/jans-auth/.well-known/webfinger", "StatusCode": "HTTP_301"}}'
    alb.ingress.kubernetes.io/actions.simple-web-discovery-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "Path":"/jans-auth/.well-known/simple-web-discovery", "StatusCode": "HTTP_301"}}'
    alb.ingress.kubernetes.io/actions.fido-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "Path":"/jans-auth/restv1/fido-configuration", "StatusCode": "HTTP_301"}}'
    alb.ingress.kubernetes.io/actions.fido2-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "Path":"/jans-fido2/restv1/configuration", "StatusCode": "HTTP_301"}}'
    alb.ingress.kubernetes.io/actions.main-page-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "Path":"/admin/", "StatusCode": "HTTP_301"}}'


spec:
  rules:
  - host: FQDN
    http:
      paths:
      - path: /*
        backend:
          serviceName: ssl-redirect
          servicePort: use-annotation
      - path: /.well-known/scim-configuration
        backend:
          serviceName: scim-redirect
          servicePort: use-annotation
      - path: /.well-known/openid-configuration
        backend:
          serviceName: openid-redirect
          servicePort: use-annotation
      - path: /.well-known/uma2-configuration
        backend:
          serviceName: uma-redirect
          servicePort: use-annotation
      - path: /.well-known/webfinger
        backend:
          serviceName: webfinger-redirect
          servicePort: use-annotation
      - path: /.well-known/simple-web-discovery
        backend:
          serviceName: simple-web-discovery-redirect
          servicePort: use-annotation
      - path: /.well-known/fido-configuration
        backend:
          serviceName: fido-redirect
          servicePort: use-annotation
      - path: /.well-known/fido2-configuration
        backend:
          serviceName: fido2-redirect
          servicePort: use-annotation
      - path: /admin
        backend:
          serviceName: main-page-redirect
          servicePort: use-annotation
      - path: /.well-known/scim-configuration
        backend:
          serviceName: scim
          servicePort: 8080
      - path: /.well-known/openid-configuration
        backend:
          serviceName: auth-server
          servicePort: 8080
      - path: /.well-known/uma2-configuration
        backend:
          serviceName: auth-server
          servicePort: 8080
      - path: /.well-known/webfinger
        backend:
          serviceName: auth-server
          servicePort: 8080
      - path: /.well-known/simple-web-discovery
        backend:
          serviceName: auth-server
          servicePort: 8080
      - path: /.well-known/fido-configuration
        backend:
          serviceName: auth-server
          servicePort: 8080
      - path: /.well-known/fido2-configuration
        backend:
          serviceName: auth-server
          servicePort: 8080
      - path: /jans-scim*
        backend:
          serviceName: jans-scim
          servicePort: 8080
      - path: /jans-config-api*
        backend:
          serviceName: config-api
          servicePort: 8074
      - path: /auth-server*
        backend:
          serviceName: auth-server
          servicePort: 8080
      - path: /idp*
        backend:
          serviceName: oxshibboleth
          servicePort: 8080
      - path: /passport*
        backend:
          serviceName: oxpassport
          servicePort: 8090
      - path: /casa*
        backend:
          serviceName: casa
          servicePort: 8080
